Use `Collections.emptyMap()` instead of `Map.of()`
Thanks to @helloworld12321 for the suggestion.

Co-authored-by: Joe Walbran <walbr037@morris.umn.edu>